# callable_traits

./: .gitignore  CMakeLists.txt  LICENSE  README.md  callable_argument_helper.hpp  callable_concepts.hpp  callable_qualifiers.hpp  callable_traits.hpp  callable_type_generator.hpp  callable_utils.hpp  qualified_by.hpp
.github/workflows/: ci.yml  fetch_test.yml
fetch_test/: CMakeLists.txt
include/: callable_argument_helper.hpp  callable_concepts.hpp  callable_type_generator.hpp  callable_utils.hpp
include/callable_traits/: callable_traits.hpp  callable_utils.hpp
include/ndof-os/callable_traits/: callable_argument_helper.hpp  callable_concepts.hpp  qualified_by.hpp
test/: CMakeLists.txt  compile_fail_check.cmake  invalid_concepts_test.cpp  test_callable_concepts.cpp
test/invalid_test/: CMakeLists.txt  compile_fail_check.cmake  invalid_concepts_test.cpp
